tests/prepare_release/package_selection/Cargo.toml_knope.toml_INVALID_output.txt
Error:   × Problem with workflow release

Error: cargo::deserialize (https://knope-dev.github.io/knope/config/packages.html#supported-formats-for-versioning)

  × Error deserializing Cargo.toml: TOML parse error at line 1, column 1
  │   |
  │ 1 |
  │   | ^
  │ missing field `package`
  │ 
  ╰─▶ TOML parse error at line 1, column 1
        |
      1 |
        | ^
      missing field `package`
      
  help: knope expects the Cargo.toml file to have a `package.version`
        property. Workspace support is coming soon!

